// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar matches snapshot when closed 1`] = `
<DocumentFragment>
  <aside
    class="fixed inset-y-0 left-0 z-50 w-64 transform bg-card border-r border-border transition-transform duration-300 ease-in-out lg:translate-x-0 lg:static lg:inset-auto lg:z-auto -translate-x-full"
  >
    <div
      class="flex h-16 items-center justify-between px-4 border-b border-border"
    >
      <a
        class="text-xl font-bold"
        data-discover="true"
        href="/dashboard"
      >
        Nexus
      </a>
      <button
        aria-label="Close"
        class="lg:hidden p-2"
      >
        <svg
          class="lucide lucide-x h-6 w-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <nav
      class="mt-5 px-2 space-y-1"
    >
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/dashboard"
        >
          <svg
            class="lucide lucide-layout-dashboard h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="9"
              rx="1"
              width="7"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="14"
              y="3"
            />
            <rect
              height="9"
              rx="1"
              width="7"
              x="14"
              y="12"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="3"
              y="16"
            />
          </svg>
          <span
            class="ml-3"
          >
            Dashboard
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/workspace"
        >
          <svg
            class="lucide lucide-search h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <path
              d="m21 21-4.3-4.3"
            />
          </svg>
          <span
            class="ml-3"
          >
            Workspace
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/sales"
        >
          <svg
            class="lucide lucide-users h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <path
              d="M16 3.13a4 4 0 0 1 0 7.75"
            />
          </svg>
          <span
            class="ml-3"
          >
            Sales
          </span>
          <svg
            class="ml-auto w-4 h-4 text-muted-foreground group-hover:text-primary transition-colors"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </a>
        <div
          class="absolute left-full top-0 mt-0 ml-1 w-48 bg-card border border-border rounded-md shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-200 z-50"
          style="min-width: 10rem;"
        >
          <ul
            class="py-2"
          >
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/sales"
              >
                Overview
              </a>
            </li>
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/sales/performance"
              >
                Performance
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/finance"
        >
          <svg
            class="lucide lucide-banknote h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="12"
              rx="2"
              width="20"
              x="2"
              y="6"
            />
            <circle
              cx="12"
              cy="12"
              r="2"
            />
            <path
              d="M6 12h.01M18 12h.01"
            />
          </svg>
          <span
            class="ml-3"
          >
            Finance
          </span>
          <svg
            class="ml-auto w-4 h-4 text-muted-foreground group-hover:text-primary transition-colors"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </a>
        <div
          class="absolute left-full top-0 mt-0 ml-1 w-48 bg-card border border-border rounded-md shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-200 z-50"
          style="min-width: 10rem;"
        >
          <ul
            class="py-2"
          >
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/finance"
              >
                Overview
              </a>
            </li>
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/finance/operations"
              >
                Operations
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/operations"
        >
          <svg
            class="lucide lucide-truck h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
            />
            <path
              d="M15 18H9"
            />
            <path
              d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
            />
            <circle
              cx="17"
              cy="18"
              r="2"
            />
            <circle
              cx="7"
              cy="18"
              r="2"
            />
          </svg>
          <span
            class="ml-3"
          >
            Operations
          </span>
          <svg
            class="ml-auto w-4 h-4 text-muted-foreground group-hover:text-primary transition-colors"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </a>
        <div
          class="absolute left-full top-0 mt-0 ml-1 w-48 bg-card border border-border rounded-md shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-200 z-50"
          style="min-width: 10rem;"
        >
          <ul
            class="py-2"
          >
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/operations"
              >
                Overview
              </a>
            </li>
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/operations/analytics"
              >
                Analytics
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/analytics"
        >
          <svg
            class="lucide lucide-chart-no-axes-column h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="18"
              y1="20"
              y2="10"
            />
            <line
              x1="12"
              x2="12"
              y1="20"
              y2="4"
            />
            <line
              x1="6"
              x2="6"
              y1="20"
              y2="14"
            />
          </svg>
          <span
            class="ml-3"
          >
            Analytics
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/ai-hub"
        >
          <svg
            class="lucide lucide-brain h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 5a3 3 0 1 0-5.997.125 4 4 0 0 0-2.526 5.77 4 4 0 0 0 .556 6.588A4 4 0 1 0 12 18Z"
            />
            <path
              d="M12 5a3 3 0 1 1 5.997.125 4 4 0 0 1 2.526 5.77 4 4 0 0 1-.556 6.588A4 4 0 1 1 12 18Z"
            />
            <path
              d="M15 13a4.5 4.5 0 0 1-3-4 4.5 4.5 0 0 1-3 4"
            />
            <path
              d="M17.599 6.5a3 3 0 0 0 .399-1.375"
            />
            <path
              d="M6.003 5.125A3 3 0 0 0 6.401 6.5"
            />
            <path
              d="M3.477 10.896a4 4 0 0 1 .585-.396"
            />
            <path
              d="M19.938 10.5a4 4 0 0 1 .585.396"
            />
            <path
              d="M6 18a4 4 0 0 1-1.967-.516"
            />
            <path
              d="M19.967 17.484A4 4 0 0 1 18 18"
            />
          </svg>
          <span
            class="ml-3"
          >
            AI Hub
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/chat"
        >
          <svg
            class="lucide lucide-bot h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 8V4H8"
            />
            <rect
              height="12"
              rx="2"
              width="16"
              x="4"
              y="8"
            />
            <path
              d="M2 14h2"
            />
            <path
              d="M20 14h2"
            />
            <path
              d="M15 13v2"
            />
            <path
              d="M9 13v2"
            />
          </svg>
          <span
            class="ml-3"
          >
            AI Chat
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/settings"
        >
          <svg
            class="lucide lucide-settings h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
          <span
            class="ml-3"
          >
            Settings
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/help"
        >
          <svg
            class="lucide lucide-info h-5 w-s"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="ml-3"
          >
            Help
          </span>
        </a>
      </div>
    </nav>
  </aside>
</DocumentFragment>
`;

exports[`Sidebar matches snapshot when open 1`] = `
<DocumentFragment>
  <aside
    class="fixed inset-y-0 left-0 z-50 w-64 transform bg-card border-r border-border transition-transform duration-300 ease-in-out lg:translate-x-0 lg:static lg:inset-auto lg:z-auto translate-x-0"
  >
    <div
      class="flex h-16 items-center justify-between px-4 border-b border-border"
    >
      <a
        class="text-xl font-bold"
        data-discover="true"
        href="/dashboard"
      >
        Nexus
      </a>
      <button
        aria-label="Close"
        class="lg:hidden p-2"
      >
        <svg
          class="lucide lucide-x h-6 w-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <nav
      class="mt-5 px-2 space-y-1"
    >
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/dashboard"
        >
          <svg
            class="lucide lucide-layout-dashboard h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="9"
              rx="1"
              width="7"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="14"
              y="3"
            />
            <rect
              height="9"
              rx="1"
              width="7"
              x="14"
              y="12"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="3"
              y="16"
            />
          </svg>
          <span
            class="ml-3"
          >
            Dashboard
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/workspace"
        >
          <svg
            class="lucide lucide-search h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <path
              d="m21 21-4.3-4.3"
            />
          </svg>
          <span
            class="ml-3"
          >
            Workspace
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/sales"
        >
          <svg
            class="lucide lucide-users h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <path
              d="M16 3.13a4 4 0 0 1 0 7.75"
            />
          </svg>
          <span
            class="ml-3"
          >
            Sales
          </span>
          <svg
            class="ml-auto w-4 h-4 text-muted-foreground group-hover:text-primary transition-colors"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </a>
        <div
          class="absolute left-full top-0 mt-0 ml-1 w-48 bg-card border border-border rounded-md shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-200 z-50"
          style="min-width: 10rem;"
        >
          <ul
            class="py-2"
          >
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/sales"
              >
                Overview
              </a>
            </li>
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/sales/performance"
              >
                Performance
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/finance"
        >
          <svg
            class="lucide lucide-banknote h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="12"
              rx="2"
              width="20"
              x="2"
              y="6"
            />
            <circle
              cx="12"
              cy="12"
              r="2"
            />
            <path
              d="M6 12h.01M18 12h.01"
            />
          </svg>
          <span
            class="ml-3"
          >
            Finance
          </span>
          <svg
            class="ml-auto w-4 h-4 text-muted-foreground group-hover:text-primary transition-colors"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </a>
        <div
          class="absolute left-full top-0 mt-0 ml-1 w-48 bg-card border border-border rounded-md shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-200 z-50"
          style="min-width: 10rem;"
        >
          <ul
            class="py-2"
          >
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/finance"
              >
                Overview
              </a>
            </li>
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/finance/operations"
              >
                Operations
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/operations"
        >
          <svg
            class="lucide lucide-truck h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
            />
            <path
              d="M15 18H9"
            />
            <path
              d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
            />
            <circle
              cx="17"
              cy="18"
              r="2"
            />
            <circle
              cx="7"
              cy="18"
              r="2"
            />
          </svg>
          <span
            class="ml-3"
          >
            Operations
          </span>
          <svg
            class="ml-auto w-4 h-4 text-muted-foreground group-hover:text-primary transition-colors"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </a>
        <div
          class="absolute left-full top-0 mt-0 ml-1 w-48 bg-card border border-border rounded-md shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-200 z-50"
          style="min-width: 10rem;"
        >
          <ul
            class="py-2"
          >
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/operations"
              >
                Overview
              </a>
            </li>
            <li>
              <a
                class="block px-4 py-2 text-sm rounded-md transition-colors text-foreground hover:bg-muted"
                data-discover="true"
                href="/operations/analytics"
              >
                Analytics
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/analytics"
        >
          <svg
            class="lucide lucide-chart-no-axes-column h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="18"
              y1="20"
              y2="10"
            />
            <line
              x1="12"
              x2="12"
              y1="20"
              y2="4"
            />
            <line
              x1="6"
              x2="6"
              y1="20"
              y2="14"
            />
          </svg>
          <span
            class="ml-3"
          >
            Analytics
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/ai-hub"
        >
          <svg
            class="lucide lucide-brain h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 5a3 3 0 1 0-5.997.125 4 4 0 0 0-2.526 5.77 4 4 0 0 0 .556 6.588A4 4 0 1 0 12 18Z"
            />
            <path
              d="M12 5a3 3 0 1 1 5.997.125 4 4 0 0 1 2.526 5.77 4 4 0 0 1-.556 6.588A4 4 0 1 1 12 18Z"
            />
            <path
              d="M15 13a4.5 4.5 0 0 1-3-4 4.5 4.5 0 0 1-3 4"
            />
            <path
              d="M17.599 6.5a3 3 0 0 0 .399-1.375"
            />
            <path
              d="M6.003 5.125A3 3 0 0 0 6.401 6.5"
            />
            <path
              d="M3.477 10.896a4 4 0 0 1 .585-.396"
            />
            <path
              d="M19.938 10.5a4 4 0 0 1 .585.396"
            />
            <path
              d="M6 18a4 4 0 0 1-1.967-.516"
            />
            <path
              d="M19.967 17.484A4 4 0 0 1 18 18"
            />
          </svg>
          <span
            class="ml-3"
          >
            AI Hub
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/chat"
        >
          <svg
            class="lucide lucide-bot h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 8V4H8"
            />
            <rect
              height="12"
              rx="2"
              width="16"
              x="4"
              y="8"
            />
            <path
              d="M2 14h2"
            />
            <path
              d="M20 14h2"
            />
            <path
              d="M15 13v2"
            />
            <path
              d="M9 13v2"
            />
          </svg>
          <span
            class="ml-3"
          >
            AI Chat
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/settings"
        >
          <svg
            class="lucide lucide-settings h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
          <span
            class="ml-3"
          >
            Settings
          </span>
        </a>
      </div>
      <div
        class="relative group"
      >
        <a
          class="flex items-center px-4 py-2 text-sm font-medium rounded-md transition-colors text-foreground hover:bg-muted"
          data-discover="true"
          href="/help"
        >
          <svg
            class="lucide lucide-info h-5 w-s"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="ml-3"
          >
            Help
          </span>
        </a>
      </div>
    </nav>
  </aside>
  <div
    class="fixed inset-0 z-40 bg-background/80 backdrop-blur-sm lg:hidden"
  />
</DocumentFragment>
`;
